--- a/stylesheet.css
+++ b/stylesheet.css
@@ -1,7 +1,6 @@
 .center {
   text-align: center;
-  margin-left: auto;
-  margin-right: auto;
+  margin: auto;
   background-color: lightgrey;
   margin-top: 20px;
   margin-bottom: 20px;
