--- a/stylesheet.css
+++ b/stylesheet.css
@@ -1,6 +1,7 @@
 .center {
   text-align: center;
-  margin: auto;
+  margin-left: auto;
+  margin-right: auto;
   background-color: lightgrey;
   margin-top: 20px;
   margin-bottom: 20px;
