--- a/stylesheet.css
+++ b/stylesheet.css
@@ -1,13 +1,11 @@
 .center {
   text-align: center;
-  margin-left: auto;
-  margin-right: auto;
+  margin: auto;
   background-color: lightgrey;
   margin-top: 20px;
   margin-bottom: 20px;
   width: 300px;
   height: 400px;
-  
 }
 
 .pushtop {
